// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.emotion-0 .GuildResults-searchInput {
  width: 20em;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  min-width: 0;
  padding: 0;
  margin: 0;
  border: 0;
  vertical-align: top;
}

.emotion-2 {
  color: rgba(0, 0, 0, 0.6);
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.4375em;
  letter-spacing: 0.00938em;
  padding: 0;
  position: relative;
  display: block;
  transform-origin: top left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: calc(100% - 24px);
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transform: translate(14px, 16px) scale(1);
  -moz-transform: translate(14px, 16px) scale(1);
  -ms-transform: translate(14px, 16px) scale(1);
  transform: translate(14px, 16px) scale(1);
  -webkit-transition: color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,-webkit-transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,max-width 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,max-width 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  z-index: 1;
  pointer-events: none;
}

.emotion-2.Mui-focused {
  color: #1976d2;
}

.emotion-2.Mui-disabled {
  color: rgba(0, 0, 0, 0.38);
}

.emotion-2.Mui-error {
  color: #d32f2f;
}

.emotion-3 {
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.4375em;
  letter-spacing: 0.00938em;
  color: rgba(0, 0, 0, 0.87);
  box-sizing: border-box;
  position: relative;
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  border-radius: 4px;
}

.emotion-3.Mui-disabled {
  color: rgba(0, 0, 0, 0.38);
  cursor: default;
}

.emotion-3:hover .MuiOutlinedInput-notchedOutline {
  border-color: rgba(0, 0, 0, 0.87);
}

@media (hover: none) {
  .emotion-3:hover .MuiOutlinedInput-notchedOutline {
    border-color: rgba(0, 0, 0, 0.23);
  }
}

.emotion-3.Mui-focused .MuiOutlinedInput-notchedOutline {
  border-color: #1976d2;
  border-width: 2px;
}

.emotion-3.Mui-error .MuiOutlinedInput-notchedOutline {
  border-color: #d32f2f;
}

.emotion-3.Mui-disabled .MuiOutlinedInput-notchedOutline {
  border-color: rgba(0, 0, 0, 0.26);
}

.emotion-4 {
  font: inherit;
  letter-spacing: inherit;
  color: currentColor;
  padding: 4px 0 5px;
  border: 0;
  box-sizing: content-box;
  background: none;
  height: 1.4375em;
  margin: 0;
  -webkit-tap-highlight-color: transparent;
  display: block;
  min-width: 0;
  width: 100%;
  -webkit-animation-name: mui-auto-fill-cancel;
  animation-name: mui-auto-fill-cancel;
  -webkit-animation-duration: 10ms;
  animation-duration: 10ms;
  padding: 16.5px 14px;
}

.emotion-4::-webkit-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-4::-moz-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-4:-ms-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-4::-ms-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-4:focus {
  outline: 0;
}

.emotion-4:invalid {
  box-shadow: none;
}

.emotion-4::-webkit-search-decoration {
  -webkit-appearance: none;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-4::-webkit-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-4::-moz-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-4:-ms-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-4::-ms-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-4:focus::-webkit-input-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-4:focus::-moz-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-4:focus:-ms-input-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-4:focus::-ms-input-placeholder {
  opacity: 0.42;
}

.emotion-4.Mui-disabled {
  opacity: 1;
  -webkit-text-fill-color: rgba(0, 0, 0, 0.38);
}

.emotion-4:-webkit-autofill {
  -webkit-animation-duration: 5000s;
  animation-duration: 5000s;
  -webkit-animation-name: mui-auto-fill;
  animation-name: mui-auto-fill;
}

.emotion-4:-webkit-autofill {
  border-radius: inherit;
}

.emotion-5 {
  text-align: left;
  position: absolute;
  bottom: 0;
  right: 0;
  top: -5px;
  left: 0;
  margin: 0;
  padding: 0 8px;
  pointer-events: none;
  border-radius: inherit;
  border-style: solid;
  border-width: 1px;
  overflow: hidden;
  min-width: 0%;
  border-color: rgba(0, 0, 0, 0.23);
}

.emotion-6 {
  float: unset;
  width: auto;
  overflow: hidden;
  display: block;
  padding: 0;
  height: 11px;
  font-size: 0.75em;
  visibility: hidden;
  max-width: 0.01px;
  -webkit-transition: max-width 50ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: max-width 50ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  white-space: nowrap;
}

.emotion-6>span {
  padding-left: 5px;
  padding-right: 5px;
  display: inline-block;
  opacity: 0;
  visibility: visible;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  letter-spacing: 0.02857em;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  color: #1976d2;
}

.emotion-7::-moz-focus-inner {
  border-style: none;
}

.emotion-7.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-7 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-7:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(25, 118, 210, 0.04);
}

@media (hover: none) {
  .emotion-7:hover {
    background-color: transparent;
  }
}

.emotion-7.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
}

.emotion-8 {
  display: inherit;
  margin-right: 8px;
  margin-left: -4px;
}

.emotion-8>*:nth-of-type(1) {
  font-size: 20px;
}

.emotion-9 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
}

.emotion-10 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-11 {
  background-color: #fff;
  color: rgba(0, 0, 0, 0.87);
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 4px;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
  overflow: hidden;
}

.emotion-11.GuildSummaryCard-card {
  width: 340px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-11 .GuildSummaryCard-header {
  width: 100%;
}

.emotion-11 .GuildSummaryCard-title {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px;
}

.emotion-13 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.emotion-14 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1.5rem;
  line-height: 1.334;
  letter-spacing: 0em;
  display: block;
}

.emotion-15 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  letter-spacing: 0.00938em;
  color: rgba(0, 0, 0, 0.6);
  display: block;
}

.emotion-16 {
  padding: 16px;
}

.emotion-16:last-child {
  padding-bottom: 24px;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
}

.emotion-17>:not(style)~:not(style) {
  margin-left: 8px;
}

.emotion-18 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);
}

.emotion-18 .MuiButtonGroup-grouped {
  min-width: 40px;
  box-shadow: none;
}

.emotion-18 .MuiButtonGroup-grouped:hover {
  box-shadow: none;
}

.emotion-18 .MuiButtonGroup-firstButton,
.emotion-18 .MuiButtonGroup-middleButton {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-right: 1px solid #bdbdbd;
  border-color: #1565c0;
}

.emotion-18 .MuiButtonGroup-firstButton.Mui-disabled,
.emotion-18 .MuiButtonGroup-middleButton.Mui-disabled {
  border-right: 1px solid rgba(0, 0, 0, 0.26);
}

.emotion-18 .MuiButtonGroup-lastButton,
.emotion-18 .MuiButtonGroup-middleButton {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.emotion-19 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  letter-spacing: 0.02857em;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 16px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  color: #fff;
  background-color: #1976d2;
  box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);
}

.emotion-19::-moz-focus-inner {
  border-style: none;
}

.emotion-19.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-19 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-19:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #1565c0;
  box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);
}

@media (hover: none) {
  .emotion-19:hover {
    background-color: #1976d2;
  }
}

.emotion-19:active {
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.emotion-19.Mui-focusVisible {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
}

.emotion-19.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
  box-shadow: none;
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-21 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.8125rem;
  line-height: 1.75;
  letter-spacing: 0.02857em;
  text-transform: uppercase;
  min-width: 64px;
  padding: 4px 10px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  color: #fff;
  background-color: #1976d2;
  box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);
}

.emotion-21::-moz-focus-inner {
  border-style: none;
}

.emotion-21.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-21 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-21:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #1565c0;
  box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);
}

@media (hover: none) {
  .emotion-21:hover {
    background-color: #1976d2;
  }
}

.emotion-21:active {
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.emotion-21.Mui-focusVisible {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
}

.emotion-21.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
  box-shadow: none;
  background-color: rgba(0, 0, 0, 0.12);
}

<div
  className="emotion-0"
>
  <div
    className="guild-search"
  >
    <div
      className="MuiFormControl-root MuiTextField-root GuildResults-searchInput emotion-1"
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-2"
        data-shrink={false}
        htmlFor=":r0:"
        id=":r0:-label"
      >
        Search guilds...
      </label>
      <div
        className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-3"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          autoFocus={false}
          className="MuiInputBase-input MuiOutlinedInput-input emotion-4"
          disabled={false}
          id=":r0:"
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Guild Name"
          required={false}
          type="text"
          value=""
        />
        <fieldset
          aria-hidden={true}
          className="MuiOutlinedInput-notchedOutline emotion-5"
        >
          <legend
            className="emotion-6"
          >
            <span>
              Search guilds...
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
    <div
      className="guild-actions"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary emotion-7"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium emotion-8"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-9"
            data-testid="GroupIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3m-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3m0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5m8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5"
            />
          </svg>
        </span>
        Add Guild
        <span
          className="MuiTouchRipple-root emotion-10"
        />
      </button>
    </div>
  </div>
  <div
    className="guilds"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root GuildSummaryCard-card emotion-11"
    >
      <div
        className="MuiCardHeader-root emotion-12"
      >
        <div
          className="MuiCardHeader-content GuildSummaryCard-header emotion-13"
        >
          <span
            className="MuiTypography-root MuiTypography-h5 MuiCardHeader-title GuildSummaryCard-title emotion-14"
          >
            string
          </span>
          <span
            className="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader GuildSummaryCard-title emotion-15"
          >
            <div
              aria-label="string"
              aria-labelledby={null}
              data-mui-internal-clone-element={true}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
            >
              string
            </div>
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root emotion-16"
      >
        <strong>
          Guild Leads: 
        </strong>
        None Assigned
        <br />
        <strong>
          Guild Members: 
        </strong>
        None Assigned
      </div>
      <div
        className="MuiCardActions-root MuiCardActions-spacing emotion-17"
      >
        <div>
          <div
            aria-label="split button"
            className="MuiButtonGroup-root MuiButtonGroup-contained emotion-18"
            role="group"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedContained MuiButtonGroup-groupedContainedHorizontal MuiButtonGroup-groupedContainedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedContained MuiButtonGroup-groupedContainedHorizontal MuiButtonGroup-groupedContainedPrimary MuiButtonGroup-firstButton emotion-19"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              Edit Guild
              <span
                className="MuiTouchRipple-root emotion-10"
              />
            </button>
            <button
              aria-haspopup="menu"
              aria-label="select merge strategy"
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedContained MuiButtonGroup-groupedContainedHorizontal MuiButtonGroup-groupedContainedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedContained MuiButtonGroup-groupedContainedHorizontal MuiButtonGroup-groupedContainedPrimary MuiButtonGroup-lastButton emotion-21"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-9"
                data-testid="ArrowDropDownIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="m7 10 5 5 5-5z"
                />
              </svg>
              <span
                className="MuiTouchRipple-root emotion-10"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root GuildSummaryCard-card emotion-11"
    >
      <div
        className="MuiCardHeader-root emotion-12"
      >
        <div
          className="MuiCardHeader-content GuildSummaryCard-header emotion-13"
        >
          <span
            className="MuiTypography-root MuiTypography-h5 MuiCardHeader-title GuildSummaryCard-title emotion-14"
          >
            stuff
          </span>
          <span
            className="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader GuildSummaryCard-title emotion-15"
          >
            <div
              aria-label=""
              aria-labelledby={null}
              data-mui-internal-clone-element={true}
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
            />
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root emotion-16"
      >
        <strong>
          Guild Leads: 
        </strong>
        None Assigned
        <br />
        <strong>
          Guild Members: 
        </strong>
        None Assigned
      </div>
      <div
        className="MuiCardActions-root MuiCardActions-spacing emotion-17"
      >
        <div>
          <div
            aria-label="split button"
            className="MuiButtonGroup-root MuiButtonGroup-contained emotion-18"
            role="group"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedContained MuiButtonGroup-groupedContainedHorizontal MuiButtonGroup-groupedContainedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedContained MuiButtonGroup-groupedContainedHorizontal MuiButtonGroup-groupedContainedPrimary MuiButtonGroup-firstButton emotion-19"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              Edit Guild
              <span
                className="MuiTouchRipple-root emotion-10"
              />
            </button>
            <button
              aria-haspopup="menu"
              aria-label="select merge strategy"
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedContained MuiButtonGroup-groupedContainedHorizontal MuiButtonGroup-groupedContainedPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedContained MuiButtonGroup-groupedContainedHorizontal MuiButtonGroup-groupedContainedPrimary MuiButtonGroup-lastButton emotion-21"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-9"
                data-testid="ArrowDropDownIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="m7 10 5 5 5-5z"
                />
              </svg>
              <span
                className="MuiTouchRipple-root emotion-10"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when no guilds are loaded 1`] = `
@keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0.4;
  }

  100% {
    opacity: 1;
  }
}

.emotion-0 .GuildResults-searchInput {
  width: 20em;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  min-width: 0;
  padding: 0;
  margin: 0;
  border: 0;
  vertical-align: top;
}

.emotion-2 {
  color: rgba(0, 0, 0, 0.6);
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.4375em;
  letter-spacing: 0.00938em;
  padding: 0;
  position: relative;
  display: block;
  transform-origin: top left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: calc(100% - 24px);
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transform: translate(14px, 16px) scale(1);
  -moz-transform: translate(14px, 16px) scale(1);
  -ms-transform: translate(14px, 16px) scale(1);
  transform: translate(14px, 16px) scale(1);
  -webkit-transition: color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,-webkit-transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,max-width 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,max-width 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  z-index: 1;
  pointer-events: none;
}

.emotion-2.Mui-focused {
  color: #1976d2;
}

.emotion-2.Mui-disabled {
  color: rgba(0, 0, 0, 0.38);
}

.emotion-2.Mui-error {
  color: #d32f2f;
}

.emotion-3 {
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.4375em;
  letter-spacing: 0.00938em;
  color: rgba(0, 0, 0, 0.87);
  box-sizing: border-box;
  position: relative;
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  border-radius: 4px;
}

.emotion-3.Mui-disabled {
  color: rgba(0, 0, 0, 0.38);
  cursor: default;
}

.emotion-3:hover .MuiOutlinedInput-notchedOutline {
  border-color: rgba(0, 0, 0, 0.87);
}

@media (hover: none) {
  .emotion-3:hover .MuiOutlinedInput-notchedOutline {
    border-color: rgba(0, 0, 0, 0.23);
  }
}

.emotion-3.Mui-focused .MuiOutlinedInput-notchedOutline {
  border-color: #1976d2;
  border-width: 2px;
}

.emotion-3.Mui-error .MuiOutlinedInput-notchedOutline {
  border-color: #d32f2f;
}

.emotion-3.Mui-disabled .MuiOutlinedInput-notchedOutline {
  border-color: rgba(0, 0, 0, 0.26);
}

.emotion-4 {
  font: inherit;
  letter-spacing: inherit;
  color: currentColor;
  padding: 4px 0 5px;
  border: 0;
  box-sizing: content-box;
  background: none;
  height: 1.4375em;
  margin: 0;
  -webkit-tap-highlight-color: transparent;
  display: block;
  min-width: 0;
  width: 100%;
  -webkit-animation-name: mui-auto-fill-cancel;
  animation-name: mui-auto-fill-cancel;
  -webkit-animation-duration: 10ms;
  animation-duration: 10ms;
  padding: 16.5px 14px;
}

.emotion-4::-webkit-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-4::-moz-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-4:-ms-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-4::-ms-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-4:focus {
  outline: 0;
}

.emotion-4:invalid {
  box-shadow: none;
}

.emotion-4::-webkit-search-decoration {
  -webkit-appearance: none;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-4::-webkit-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-4::-moz-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-4:-ms-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-4::-ms-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-4:focus::-webkit-input-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-4:focus::-moz-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-4:focus:-ms-input-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-4:focus::-ms-input-placeholder {
  opacity: 0.42;
}

.emotion-4.Mui-disabled {
  opacity: 1;
  -webkit-text-fill-color: rgba(0, 0, 0, 0.38);
}

.emotion-4:-webkit-autofill {
  -webkit-animation-duration: 5000s;
  animation-duration: 5000s;
  -webkit-animation-name: mui-auto-fill;
  animation-name: mui-auto-fill;
}

.emotion-4:-webkit-autofill {
  border-radius: inherit;
}

.emotion-5 {
  text-align: left;
  position: absolute;
  bottom: 0;
  right: 0;
  top: -5px;
  left: 0;
  margin: 0;
  padding: 0 8px;
  pointer-events: none;
  border-radius: inherit;
  border-style: solid;
  border-width: 1px;
  overflow: hidden;
  min-width: 0%;
  border-color: rgba(0, 0, 0, 0.23);
}

.emotion-6 {
  float: unset;
  width: auto;
  overflow: hidden;
  display: block;
  padding: 0;
  height: 11px;
  font-size: 0.75em;
  visibility: hidden;
  max-width: 0.01px;
  -webkit-transition: max-width 50ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: max-width 50ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  white-space: nowrap;
}

.emotion-6>span {
  padding-left: 5px;
  padding-right: 5px;
  display: inline-block;
  opacity: 0;
  visibility: visible;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  letter-spacing: 0.02857em;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  color: #1976d2;
}

.emotion-7::-moz-focus-inner {
  border-style: none;
}

.emotion-7.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-7 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-7:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(25, 118, 210, 0.04);
}

@media (hover: none) {
  .emotion-7:hover {
    background-color: transparent;
  }
}

.emotion-7.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
}

.emotion-8 {
  display: inherit;
  margin-right: 8px;
  margin-left: -4px;
}

.emotion-8>*:nth-of-type(1) {
  font-size: 20px;
}

.emotion-9 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
}

.emotion-10 {
  background-color: #fff;
  color: rgba(0, 0, 0, 0.87);
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 4px;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
  overflow: hidden;
}

.emotion-10.SkeletonLoader-card {
  width: 340px;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px;
}

.emotion-12 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.emotion-13 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1.5rem;
  line-height: 1.334;
  letter-spacing: 0em;
  display: block;
}

.emotion-14 {
  display: block;
  background-color: rgba(0, 0, 0, 0.11);
  height: auto;
  margin-top: 0;
  margin-bottom: 0;
  transform-origin: 0 55%;
  -webkit-transform: scale(1, 0.60);
  -moz-transform: scale(1, 0.60);
  -ms-transform: scale(1, 0.60);
  transform: scale(1, 0.60);
  border-radius: 4px/6.7px;
  -webkit-animation: animation-0 2s ease-in-out 0.5s infinite;
  animation: animation-0 2s ease-in-out 0.5s infinite;
}

.emotion-14:empty:before {
  content: "\\00a0";
}

.emotion-15 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  letter-spacing: 0.00938em;
  color: rgba(0, 0, 0, 0.6);
  display: block;
}

.emotion-17 {
  margin-top: 16px;
  margin-left: 16px;
  margin-right: 16px;
  height: 80px;
}

.emotion-19 {
  height: 10px;
}

<div
  className="emotion-0"
>
  <div
    className="guild-search"
  >
    <div
      className="MuiFormControl-root MuiTextField-root GuildResults-searchInput emotion-1"
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-2"
        data-shrink={false}
        htmlFor=":r5:"
        id=":r5:-label"
      >
        Search guilds...
      </label>
      <div
        className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-3"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          autoFocus={false}
          className="MuiInputBase-input MuiOutlinedInput-input emotion-4"
          disabled={false}
          id=":r5:"
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Guild Name"
          required={false}
          type="text"
          value=""
        />
        <fieldset
          aria-hidden={true}
          className="MuiOutlinedInput-notchedOutline emotion-5"
        >
          <legend
            className="emotion-6"
          >
            <span>
              Search guilds...
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
    <div
      className="guild-actions"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary emotion-7"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium emotion-8"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-9"
            data-testid="GroupIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3m-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3m0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5m8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5"
            />
          </svg>
        </span>
        Add Guild
      </button>
    </div>
  </div>
  <div
    className="guilds"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root SkeletonLoader-card emotion-10"
    >
      <div
        className="MuiCardHeader-root emotion-11"
      >
        <div
          className="MuiCardHeader-content emotion-12"
        >
          <span
            className="MuiTypography-root MuiTypography-h5 MuiCardHeader-title emotion-13"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": 50,
                  "width": undefined,
                }
              }
            />
          </span>
          <span
            className="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader emotion-15"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": undefined,
                  "width": undefined,
                }
              }
            />
          </span>
        </div>
      </div>
      <div
        className="MuiBox-root emotion-17"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <div
          className="MuiBox-root emotion-19"
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": 180,
            }
          }
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root SkeletonLoader-card emotion-10"
    >
      <div
        className="MuiCardHeader-root emotion-11"
      >
        <div
          className="MuiCardHeader-content emotion-12"
        >
          <span
            className="MuiTypography-root MuiTypography-h5 MuiCardHeader-title emotion-13"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": 50,
                  "width": undefined,
                }
              }
            />
          </span>
          <span
            className="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader emotion-15"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": undefined,
                  "width": undefined,
                }
              }
            />
          </span>
        </div>
      </div>
      <div
        className="MuiBox-root emotion-17"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <div
          className="MuiBox-root emotion-19"
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": 180,
            }
          }
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root SkeletonLoader-card emotion-10"
    >
      <div
        className="MuiCardHeader-root emotion-11"
      >
        <div
          className="MuiCardHeader-content emotion-12"
        >
          <span
            className="MuiTypography-root MuiTypography-h5 MuiCardHeader-title emotion-13"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": 50,
                  "width": undefined,
                }
              }
            />
          </span>
          <span
            className="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader emotion-15"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": undefined,
                  "width": undefined,
                }
              }
            />
          </span>
        </div>
      </div>
      <div
        className="MuiBox-root emotion-17"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <div
          className="MuiBox-root emotion-19"
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": 180,
            }
          }
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root SkeletonLoader-card emotion-10"
    >
      <div
        className="MuiCardHeader-root emotion-11"
      >
        <div
          className="MuiCardHeader-content emotion-12"
        >
          <span
            className="MuiTypography-root MuiTypography-h5 MuiCardHeader-title emotion-13"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": 50,
                  "width": undefined,
                }
              }
            />
          </span>
          <span
            className="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader emotion-15"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": undefined,
                  "width": undefined,
                }
              }
            />
          </span>
        </div>
      </div>
      <div
        className="MuiBox-root emotion-17"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <div
          className="MuiBox-root emotion-19"
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": 180,
            }
          }
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root SkeletonLoader-card emotion-10"
    >
      <div
        className="MuiCardHeader-root emotion-11"
      >
        <div
          className="MuiCardHeader-content emotion-12"
        >
          <span
            className="MuiTypography-root MuiTypography-h5 MuiCardHeader-title emotion-13"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": 50,
                  "width": undefined,
                }
              }
            />
          </span>
          <span
            className="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader emotion-15"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": undefined,
                  "width": undefined,
                }
              }
            />
          </span>
        </div>
      </div>
      <div
        className="MuiBox-root emotion-17"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <div
          className="MuiBox-root emotion-19"
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": 180,
            }
          }
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root SkeletonLoader-card emotion-10"
    >
      <div
        className="MuiCardHeader-root emotion-11"
      >
        <div
          className="MuiCardHeader-content emotion-12"
        >
          <span
            className="MuiTypography-root MuiTypography-h5 MuiCardHeader-title emotion-13"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": 50,
                  "width": undefined,
                }
              }
            />
          </span>
          <span
            className="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader emotion-15"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": undefined,
                  "width": undefined,
                }
              }
            />
          </span>
        </div>
      </div>
      <div
        className="MuiBox-root emotion-17"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <div
          className="MuiBox-root emotion-19"
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": 180,
            }
          }
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root SkeletonLoader-card emotion-10"
    >
      <div
        className="MuiCardHeader-root emotion-11"
      >
        <div
          className="MuiCardHeader-content emotion-12"
        >
          <span
            className="MuiTypography-root MuiTypography-h5 MuiCardHeader-title emotion-13"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": 50,
                  "width": undefined,
                }
              }
            />
          </span>
          <span
            className="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader emotion-15"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": undefined,
                  "width": undefined,
                }
              }
            />
          </span>
        </div>
      </div>
      <div
        className="MuiBox-root emotion-17"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <div
          className="MuiBox-root emotion-19"
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": 180,
            }
          }
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root SkeletonLoader-card emotion-10"
    >
      <div
        className="MuiCardHeader-root emotion-11"
      >
        <div
          className="MuiCardHeader-content emotion-12"
        >
          <span
            className="MuiTypography-root MuiTypography-h5 MuiCardHeader-title emotion-13"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": 50,
                  "width": undefined,
                }
              }
            />
          </span>
          <span
            className="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader emotion-15"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": undefined,
                  "width": undefined,
                }
              }
            />
          </span>
        </div>
      </div>
      <div
        className="MuiBox-root emotion-17"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <div
          className="MuiBox-root emotion-19"
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": 180,
            }
          }
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root SkeletonLoader-card emotion-10"
    >
      <div
        className="MuiCardHeader-root emotion-11"
      >
        <div
          className="MuiCardHeader-content emotion-12"
        >
          <span
            className="MuiTypography-root MuiTypography-h5 MuiCardHeader-title emotion-13"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": 50,
                  "width": undefined,
                }
              }
            />
          </span>
          <span
            className="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader emotion-15"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": undefined,
                  "width": undefined,
                }
              }
            />
          </span>
        </div>
      </div>
      <div
        className="MuiBox-root emotion-17"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <div
          className="MuiBox-root emotion-19"
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": 180,
            }
          }
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root SkeletonLoader-card emotion-10"
    >
      <div
        className="MuiCardHeader-root emotion-11"
      >
        <div
          className="MuiCardHeader-content emotion-12"
        >
          <span
            className="MuiTypography-root MuiTypography-h5 MuiCardHeader-title emotion-13"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": 50,
                  "width": undefined,
                }
              }
            />
          </span>
          <span
            className="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader emotion-15"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": undefined,
                  "width": undefined,
                }
              }
            />
          </span>
        </div>
      </div>
      <div
        className="MuiBox-root emotion-17"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <div
          className="MuiBox-root emotion-19"
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": 180,
            }
          }
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root SkeletonLoader-card emotion-10"
    >
      <div
        className="MuiCardHeader-root emotion-11"
      >
        <div
          className="MuiCardHeader-content emotion-12"
        >
          <span
            className="MuiTypography-root MuiTypography-h5 MuiCardHeader-title emotion-13"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": 50,
                  "width": undefined,
                }
              }
            />
          </span>
          <span
            className="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader emotion-15"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": undefined,
                  "width": undefined,
                }
              }
            />
          </span>
        </div>
      </div>
      <div
        className="MuiBox-root emotion-17"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <div
          className="MuiBox-root emotion-19"
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": 180,
            }
          }
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root SkeletonLoader-card emotion-10"
    >
      <div
        className="MuiCardHeader-root emotion-11"
      >
        <div
          className="MuiCardHeader-content emotion-12"
        >
          <span
            className="MuiTypography-root MuiTypography-h5 MuiCardHeader-title emotion-13"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": 50,
                  "width": undefined,
                }
              }
            />
          </span>
          <span
            className="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader emotion-15"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": undefined,
                  "width": undefined,
                }
              }
            />
          </span>
        </div>
      </div>
      <div
        className="MuiBox-root emotion-17"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <div
          className="MuiBox-root emotion-19"
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": 180,
            }
          }
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root SkeletonLoader-card emotion-10"
    >
      <div
        className="MuiCardHeader-root emotion-11"
      >
        <div
          className="MuiCardHeader-content emotion-12"
        >
          <span
            className="MuiTypography-root MuiTypography-h5 MuiCardHeader-title emotion-13"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": 50,
                  "width": undefined,
                }
              }
            />
          </span>
          <span
            className="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader emotion-15"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": undefined,
                  "width": undefined,
                }
              }
            />
          </span>
        </div>
      </div>
      <div
        className="MuiBox-root emotion-17"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <div
          className="MuiBox-root emotion-19"
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": 180,
            }
          }
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root SkeletonLoader-card emotion-10"
    >
      <div
        className="MuiCardHeader-root emotion-11"
      >
        <div
          className="MuiCardHeader-content emotion-12"
        >
          <span
            className="MuiTypography-root MuiTypography-h5 MuiCardHeader-title emotion-13"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": 50,
                  "width": undefined,
                }
              }
            />
          </span>
          <span
            className="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader emotion-15"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": undefined,
                  "width": undefined,
                }
              }
            />
          </span>
        </div>
      </div>
      <div
        className="MuiBox-root emotion-17"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <div
          className="MuiBox-root emotion-19"
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": 180,
            }
          }
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root SkeletonLoader-card emotion-10"
    >
      <div
        className="MuiCardHeader-root emotion-11"
      >
        <div
          className="MuiCardHeader-content emotion-12"
        >
          <span
            className="MuiTypography-root MuiTypography-h5 MuiCardHeader-title emotion-13"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": 50,
                  "width": undefined,
                }
              }
            />
          </span>
          <span
            className="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader emotion-15"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": undefined,
                  "width": undefined,
                }
              }
            />
          </span>
        </div>
      </div>
      <div
        className="MuiBox-root emotion-17"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <div
          className="MuiBox-root emotion-19"
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": 180,
            }
          }
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root SkeletonLoader-card emotion-10"
    >
      <div
        className="MuiCardHeader-root emotion-11"
      >
        <div
          className="MuiCardHeader-content emotion-12"
        >
          <span
            className="MuiTypography-root MuiTypography-h5 MuiCardHeader-title emotion-13"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": 50,
                  "width": undefined,
                }
              }
            />
          </span>
          <span
            className="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader emotion-15"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": undefined,
                  "width": undefined,
                }
              }
            />
          </span>
        </div>
      </div>
      <div
        className="MuiBox-root emotion-17"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <div
          className="MuiBox-root emotion-19"
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": 180,
            }
          }
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root SkeletonLoader-card emotion-10"
    >
      <div
        className="MuiCardHeader-root emotion-11"
      >
        <div
          className="MuiCardHeader-content emotion-12"
        >
          <span
            className="MuiTypography-root MuiTypography-h5 MuiCardHeader-title emotion-13"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": 50,
                  "width": undefined,
                }
              }
            />
          </span>
          <span
            className="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader emotion-15"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": undefined,
                  "width": undefined,
                }
              }
            />
          </span>
        </div>
      </div>
      <div
        className="MuiBox-root emotion-17"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <div
          className="MuiBox-root emotion-19"
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": 180,
            }
          }
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root SkeletonLoader-card emotion-10"
    >
      <div
        className="MuiCardHeader-root emotion-11"
      >
        <div
          className="MuiCardHeader-content emotion-12"
        >
          <span
            className="MuiTypography-root MuiTypography-h5 MuiCardHeader-title emotion-13"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": 50,
                  "width": undefined,
                }
              }
            />
          </span>
          <span
            className="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader emotion-15"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": undefined,
                  "width": undefined,
                }
              }
            />
          </span>
        </div>
      </div>
      <div
        className="MuiBox-root emotion-17"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <div
          className="MuiBox-root emotion-19"
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": 180,
            }
          }
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root SkeletonLoader-card emotion-10"
    >
      <div
        className="MuiCardHeader-root emotion-11"
      >
        <div
          className="MuiCardHeader-content emotion-12"
        >
          <span
            className="MuiTypography-root MuiTypography-h5 MuiCardHeader-title emotion-13"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": 50,
                  "width": undefined,
                }
              }
            />
          </span>
          <span
            className="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader emotion-15"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": undefined,
                  "width": undefined,
                }
              }
            />
          </span>
        </div>
      </div>
      <div
        className="MuiBox-root emotion-17"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <div
          className="MuiBox-root emotion-19"
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": 180,
            }
          }
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root SkeletonLoader-card emotion-10"
    >
      <div
        className="MuiCardHeader-root emotion-11"
      >
        <div
          className="MuiCardHeader-content emotion-12"
        >
          <span
            className="MuiTypography-root MuiTypography-h5 MuiCardHeader-title emotion-13"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": 50,
                  "width": undefined,
                }
              }
            />
          </span>
          <span
            className="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader emotion-15"
          >
            <span
              className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
              style={
                Object {
                  "height": undefined,
                  "width": undefined,
                }
              }
            />
          </span>
        </div>
      </div>
      <div
        className="MuiBox-root emotion-17"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <div
          className="MuiBox-root emotion-19"
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": undefined,
            }
          }
        />
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse emotion-14"
          style={
            Object {
              "height": 15,
              "width": 180,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
